<resources>
    <string name="app_name">Job Manager</string>
    <string name="action_settings">Settings</string>
    <string name="action_select_all">Select All</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="action_confirm_delete">Are you sure you want to delete? You can\'t undo this action.</string>
    <string name="action_edit">Edit</string>
    <string name="action_new">New</string>
    <string name="action_logout">Logout</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>
    <string name="hint_search">Search for Job...</string>
    <string name="no_data">Do not exist registered data...</string>
    <string name="title_job_form">Add Job</string>
    <string name="title_job_form_update">Update Job</string>
    <string name="discard_form">Discard changes</string>
    <string name="title_client_form">Add Client</string>
    <string name="title_client_form_update">Update Client</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="discard_changes">Discard your changes?</string>
    <string name="about_title">About</string>
    <string name="about_message">Developed by FS Developer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back_confirm">Are you sure you want to return without saving the data?</string>
    <string name="job">Job</string>
    <string name="client">Client</string>
    <string name="balance">Balance</string>
    <string name="no_support_functionality">You do not have applications installed to handle this action, or the version of your system does not support this functionality.</string>

    <string name="currency_symbol" formatted="false">$ %1$.2f</string>
    <string name="currency_symbol_unique">$</string>

    <!-- Strings of form job -->
    <string name="job_protocol">Protocol</string>
    <string name="job_title">Title</string>
    <string name="job_description">Description</string>
    <string name="job_note">Note</string>
    <string name="job_price">Price</string>
    <string name="job_expense">Expense</string>
    <string name="job_is_finalized">The job was finalized?</string>
    <string name="job_finalized_at">Date of completion</string>
    <string name="job_client">Client</string>
    <string name="job_categories">Categories</string>
    <string name="job_date_finalized">Date</string>
    <string name="job_date_created">Registration date</string>
    <string name="job_time_finalized">Time</string>
    <string name="job_hint_title">Title for the job</string>
    <string name="job_hint_description">Describe what should be done...</string>
    <string name="job_hint_note">General notes, as the job was carried out...</string>
    <string name="job_hint_price">Price charged</string>
    <string name="job_hint_expense">Expense</string>
    <string name="job_hint_finalized_at">Date of completion</string>
    <string name="job_hint_client">Select the client</string>
    <string name="job_hint_categories">Select the categories</string>
    <string name="tooltip_add_client">Add a new client</string>
    <string name="tooltip_add_phone">Add a new phone</string>
    <string name="tooltip_remove_phone">Remove phone</string>

    <!-- Strings of form client -->
    <string name="client_name">Name</string>
    <string name="client_email">Email</string>
    <string name="client_address">Address</string>
    <string name="client_phone">Phone</string>
    <string name="client_associates_last_jobs">Latest jobs associated</string>
    <string name="client_hint_address">19XX Arbutus Drive\nMiami, FL 33012</string>
    <string name="client_hint_email">Contact email</string>
    <string name="client_hint_name">Full name</string>
    <string name="client_hint_phone">Number</string>

    <!-- Strings of system messages errors -->
    <string name="error_bd">An error occurred while trying to connect to the database. Try again!</string>
    <string name="error_system">Sorry. An error occurred in the application. Try again!</string>
    <string name="error_add_job">An error occurred while trying to save the job. Try again...</string>
    <string name="error_edit_job">Could not update the job. Please try again...</string>
    <string name="error_edit_client">Could not update the client. Please try again...</string>
    <string name="error_delete_job">Could not remove the job. Please try again...</string>
    <string name="error_delete_client">Could not remove the client. Please try again...</string>
    <string name="error_delete_client_validation">You can not remove the client that is related to any registered work...</string>
    <string name="error_finalized_job">Could not mark the job as finalized. Please try again...</string>
    <string name="error_not_finalized_job">Could not mark the job as not finalized. Please try again...</string>

    <!-- Strings of system messages success -->
    <string name="success_add_job">Job added successfully!</string>
    <string name="success_edit_job">Job successfully updated!</string>
    <string name="success_edit_client">Client successfully updated!</string>
    <string name="success_finalized_job">Job marked as finalized successfully! In %1$s</string>
    <string name="success_not_finalized_job">Job was marked as not finalized!</string>
    <plurals name="success_delete_job">
        <item quantity="one">Job successfully removed!</item>
        <item quantity="other">%d Jobs removed successfully!</item>
    </plurals>

    <plurals name="success_delete_client">
        <item quantity="one">Client successfully removed!</item>
        <item quantity="other">%d Clients removed successfully!</item>
    </plurals>

    <plurals name="success_delete_client_partial">
        <item quantity="one">A client was not removed because it is related to some registered job...</item>
        <item quantity="other">%d clients were not removed because they are related to any registered job...</item>
    </plurals>

    <!-- String related to date time -->
    <string name="date_time_bd">yyyy-MM-dd HH:mm:ss</string>
    <string name="date_time">yyyy/MM/dd HH:mm:ss</string>
    <string name="date_default">MMMM dd, yyyy</string>
    <string name="date_1">yyyy/MM/dd</string>
    <string name="date_2">yyyy-MM-dd</string>
    <string name="date_balance">yyyy-MM-dd</string>
    <string name="date_balance_view">MMM dd, yyyy</string>
    <string name="time">HH:mm</string>
    <string name="error_convert_date">An error occurred while trying to convert date</string>

    <!-- String of menu options -->
    <string name="menu_job">Jobs</string>
    <string name="menu_client">Clients</string>
    <string name="menu_balance">Balance</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_others">Others</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!--validation-->
    <string name="validate_required">is required!</string>
    <string name="validate_name">Name is required!</string>
    <string name="validate_name_min">Must have at least 2 characters!</string>
    <string name="validate_email">Email invalid!</string>
    <string name="validate_title">The title is required!</string>
    <string name="validate_title_min">Must have at least 5 characters!</string>
    <string name="validate_price">Price is required!</string>
    <string name="validate_client">Client is required. If not listed register a new one before continuing...</string>

    <!--share-->
    <string name="share_job">Share job...</string>
    <string name="share_client">Share client...</string>
    <string name="share_balance">Share balance...</string>

    <!-- Strings of the Balance -->
    <string name="input_balance">Input</string>
    <string name="output_balance">Output</string>
    <string name="total_balance">Total</string>
    <string name="today_balance">Today</string>
    <string name="date_filter_balance">%1$s to %2$s</string>
    <string name="include_not_finalized">Include work not yet finalized at the balance sheet?</string>
    <string name="average_input_balance">Average entries</string>
    <string name="average_output_balance">Average output</string>
    <string name="average_profit_balance">Average profit value</string>

    <!-- Array related to tabs -->
    <string-array name="tabs">
        <item>Jobs</item>
        <item>Clients</item>
        <item>Balance</item>
    </string-array>

    <!-- Array related to categories -->
    <string-array name="categories_default">
        <item>Maintenance</item>
        <item>Development</item>
        <item>Design</item>
        <item>Construction</item>
        <item>Reform</item>
        <item>Cleaning</item>
        <item>Consultation</item>
        <item>Advisory</item>
        <item>Classroom</item>
        <item>Other</item>
    </string-array>

    <!-- Array related to types phone -->
    <string-array name="types_phone">
        <item>Mobile</item>
        <item>Work</item>
        <item>Home</item>
        <item>Other</item>
    </string-array>

    <plurals name="number_selected">
        <item quantity="one">1 selected</item>
        <item quantity="other">%d selected</item>
    </plurals>

    <!-- Strings related to login -->
</resources>
