<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_job"
            android:checked="true"
            android:title="@string/menu_job" />
        <item
            android:id="@+id/action_client"
            android:title="@string/menu_client" />
        <item
            android:id="@+id/action_balance"
            android:title="@string/menu_balance" />

    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/action_settings" />
    </group>
</menu>