<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_search"
            android:icon="@drawable/action_search"
            android:tint="@android:color/white"
            android:title="@string/action_search"
            android:showAsAction="collapseActionView|ifRoom"
            app:showAsAction="ifRoom"
            app:actionViewClass="android.support.v7.widget.SearchView"/>

        <!-- Settings, should always be in the overflow -->
        <item
            android:id="@+id/action_settings"
            android:showAsAction="never"
            app:showAsAction="never"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/action_about"
            android:showAsAction="never"
            app:showAsAction="never"
            android:title="@string/action_about" />
</menu>