<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewJobForm"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fsdeveloper.jobmanager.activity.JobFormActivity"
    tools:showIn="@layout/activity_job_form">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/job_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_title"
            android:hint="@string/job_hint_title"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt_title"
            android:layout_marginTop="10dp"
            android:text="@string/job_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edt_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_desc"
            android:hint="@string/job_hint_description"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textCapSentences" />

        <TextView
            android:id="@+id/text_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt_desc"
            android:layout_marginTop="10dp"
            android:text="@string/job_note"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edt_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_note"
            android:hint="@string/job_hint_note"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textCapSentences" />

        <LinearLayout
            android:id="@+id/layout_box1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt_note"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_price"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="18dp"
                android:gravity="center"
                android:text="@string/job_expense"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_box2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_box1"
            android:layout_marginTop="-3dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/job_hint_price"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:text="" />

            <EditText
                android:id="@+id/edt_expense"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/job_hint_expense"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_box2"
            android:layout_marginTop="10dp"
            android:text="@string/job_client"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <AutoCompleteTextView
            android:id="@+id/edt_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_client"
            android:layout_toLeftOf="@+id/bt_new_client"
            android:layout_toStartOf="@+id/bt_new_client"
            android:completionThreshold="2"
            android:hint="@string/job_hint_client"
            android:imeOptions="actionNext"
            android:inputType="textPersonName|textCapWords"
            android:longClickable="true" />

        <ImageButton
            android:id="@+id/bt_new_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edt_client"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/edt_client"
            android:background="@android:color/transparent"
            android:contentDescription="@string/tooltip_add_client"
            android:src="@drawable/ic_action_new"
            android:tint="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/text_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt_client"
            android:layout_marginTop="10dp"
            android:text="@string/job_categories"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.fsdeveloper.jobmanager.tool.MultiSelectSpinner
            android:id="@+id/spinner_categories"
            style="@style/AppSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_categories"
            android:layout_marginTop="10dp" />

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switch_finalized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner_categories"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="15dp"
            android:checked="false"
            android:imeOptions="actionGo"
            android:text="@string/job_is_finalized"
            android:textColor="@android:color/tertiary_text_dark"
            app:switchPadding="15dp" />

        <LinearLayout
            android:id="@+id/layout_box3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/switch_finalized"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/text_date_finalized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_date_finalized"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/text_time_finalized"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="0dp"
                android:gravity="center"
                android:text="@string/job_time_finalized"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_box4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_box3"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_date_finalized"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:onClick="showDatePickerDialog" />

            <EditText
                android:id="@+id/edt_time_finalized"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                android:focusable="false"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:onClick="showTimePickerDialog" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_add_job"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/layout_box4"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/textColorPrimary" />

    </RelativeLayout>
</ScrollView>