<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewClientForm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fsdeveloper.jobmanager.activity.ClientFormActivity"
    tools:showIn="@layout/activity_client_form">

    <RelativeLayout
        android:id="@+id/layout_form_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/client_name"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_name"
            android:hint="@string/client_hint_name"
            android:inputType="textPersonName|textCapWords" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt_name"
            android:layout_marginTop="10dp"
            android:text="@string/client_email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_email"
            android:hint="@string/client_hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textAutoComplete" />

        <TextView
            android:id="@+id/text_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt_email"
            android:layout_marginTop="10dp"
            android:text="@string/client_address"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/text_address"
            android:hint="@string/client_hint_address"
            android:imeOptions="actionNext"
            android:inputType="textMultiLine|textCapSentences" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edt_address"
            android:layout_marginTop="10dp"
            android:text="@string/client_phone"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageButton
            android:id="@+id/bt_new_phone"
            android:contentDescription="@string/tooltip_add_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edt_address"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/text_phone"
            android:layout_toRightOf="@+id/text_phone"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_action_new"
            android:tint="@color/colorPrimaryDark" />

        <LinearLayout
            android:id="@+id/box_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_phone"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row_phone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/client_hint_phone"
                    android:inputType="phone" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_type_phone"
                    style="@style/AppSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="0.25"
                    android:gravity="right"
                    android:entries="@array/types_phone"/>

                <ImageButton
                    android:id="@+id/bt_remove_phone"
                    android:contentDescription="@string/tooltip_remove_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_action_remove_mini"
                    android:tint="@color/colorButtonMini" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/bt_add_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/box_phone"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/add"
            android:textColor="@color/textColorPrimary" />

    </RelativeLayout>

</ScrollView>
